# treelib

./: .gitignore  CMakeLists.txt  treelibConfig.cmake
docs/: README.md
examples/: CMakeLists.txt  flex_tree_example.cpp  flex_tree_test.cpp  flex_tree_test.hpp  main.cpp
include/treelib/: array_tree.hpp  flat_flex_tree.hpp  flat_n_ary_tree.hpp  flex_tree.hpp  flex_tree_old_.hpp  n_ary_tree.hpp  node_traits.hpp
python/: fib.c  fib.pyd  fib_test.py  main.py  setup.py  treelib.cp313-win_amd64.pyd
python/binding/: CMakeLists.txt  flex_tree.cpp
tests/: CMakeLists.txt  flex_tree_unit_test.cpp
